<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="82dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/sign_in_label"
        android:textColor="#000"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LoginTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EmailTextBox"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/bg_rounded_control"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrongEmailLabel" />

    <EditText
        android:id="@+id/PasswordTextBox"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/bg_rounded_control"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailTextBox" />

    <EditText
        android:id="@+id/NameTextBox"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/bg_rounded_control"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Name_hint"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextBox" />

    <Button
        android:id="@+id/SignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@android:color/transparent"
        android:onClick="fSignInButton"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/DoctorCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:buttonTint="@color/white"
        android:text="@string/doctor_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/NameTextBox"
        app:layout_constraintTop_toBottomOf="@+id/NameTextBox" />

    <TextView
        android:id="@+id/wrongEmailLabel"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="109dp"
        android:text="@string/wrong_email"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/EmailTextBox"
        app:layout_constraintStart_toStartOf="@+id/EmailTextBox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrongPasswordLabel"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="196dp"
        android:text="@string/wrong_password"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/EmailTextBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EmailTextBox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrongPasswordLabel2"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginTop="284dp"
        android:text="@string/wrong_cpassword"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/EmailTextBox"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/EmailTextBox"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirmPasswordTextBox"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/bg_rounded_control"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTextBox" />

</androidx.constraintlayout.widget.ConstraintLayout>