<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".AddDispenserActivity">

    <EditText
        android:id="@+id/MD5TextBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:backgroundTint="@color/white"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/validation_code"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDispenser" />

    <EditText
        android:id="@+id/idDispenser"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:backgroundTint="@color/white"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/DispenserID"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AddDispenserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:background="@android:color/transparent"
        android:onClick="fAddDispenserButton"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dispenserNameTextBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/dispenser_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/whitehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MD5TextBox" />
</androidx.constraintlayout.widget.ConstraintLayout>